# tocky

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  fly.toml  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2e1ad0cc1690_add_prompt_templates_table.py  3aa967e8489e_initial_schema.py  4e5c14c20541_add_soap_note_versions_table_and_.py  a1b2c3d4e5f6_add_french_language_support.py  b4a2f1c9d3e7_add_full_audio_and_review_flags.py  c3f8a71d5b42_add_transcription_checkpoint_fields.py  cc14b64f4796_add_flag_feedback_table.py  dd92cc0bf77a_add_upload_mode_and_processing_fields.py  e68c28e51b31_add_users_and_sessions_tables.py  eeb4a147c706_add_transcript_status_and_error_message.py  eff2ea357dce_add_emotion_column_to_transcripts.py  f7d9e2a1b3c5_add_icd10_codes.py
apps/api/app/: config.py  database.py  dependencies.py  main.py  seed.py
apps/api/app/db_models/: __init__.py  audio_segment.py  consultation.py  flag_feedback.py  icd10_code.py  session.py  (+5 more)
apps/api/prompts/: classification.md  entity_extraction.md  icd10_suggestion.md  language_detection.md  metadata_extraction.md  soap_ar_eg.md  soap_ar_gulf.md  soap_en.md  soap_extract_ar.md  soap_extract_en.md  soap_extract_fr.md  soap_extract_vi.md  soap_fr.md  soap_reason_ar.md  soap_reason_en.md  soap_reason_fr.md  soap_reason_vi.md  soap_vi.md  transcript_polish.md  transcript_polish_ar.md  transcript_polish_fr.md  transcript_polish_vi.md  transcription_omni.md
(+137 files in other folders)
